# segmented-tomo-nxs

./: .gitignore  README.md  README.md~  pyproject.toml  requirements.txt
notebooks/: ADAM_tomo_nexusformat.ipynb
notebooks/.ipynb_checkpoints/: ADAM_tomo_nexusformat-checkpoint.ipynb
nxtomo_segmented_builder/: __init__.py  builder.py  version.py
