[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nxtomo_builder"
dynamic = ["version"]
description = "Create NeXus-compliant files from segmented tomography data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "nexusformat>=1.0.0",
    "h5py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
jupyter = [
    "jupyter",
    "notebook",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/yourusername/nxtomo-builder"

[tool.setuptools.packages.find]
where = ["."]
include = ["nxtomo_builder*"]

[tool.setuptools.dynamic]
version = {attr = "nxtomo_builder.version.__version__"}

[project.scripts]
# Si en el futuro activas CLI:
# nxtomo-create = "nxtomo_builder.cli:main"
